내장 변수 테스트

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,3 +25,8 @@ jobs:
         run: |
           echo "Good"
           echo "Morning"
+
+      - name: Github Actions 자체에 내장된 변수 사용하기
+        run: |
+          echo $GITHUB_SHA
+          echo $GITHUB_REPOSITORY
