--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,7 @@ jobs:
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
             cd /home/ubuntu/github-action-test
-            git pull origin main
+            sudo git pull origin main
             cd /spring-demo
             ./gradlew clean build
             sudo fuser -k -n tcp 8080 || true
