--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,14 +41,18 @@ jobs:
     steps:
       - name: SSH로 EC2 접속
         uses: appleboy/ssh-action@master
+        env:
+          APPLICATION_PROPERTIES: ${{ secrets.APPLICATION_PROPERTIES }}
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
+          envs: APPLICATION_PROPERTIES
           script: |
-            cd /home/ubuntu/github-action-test
+            cd /home/ubuntu/github-action-test/spring_demo
+            rm -rf src/main/resources/application.yml
             sudo git pull origin main
-            cd spring_demo
+            echo "$APPLICATION_PROPERTIES" > src/main/resources/application.yml
             ./gradlew clean build
             sudo fuser -k -n tcp 8080 || true
             nohup java -jar build/libs/*SNAPSHOT.jar > .output.log 2>&1 &
