--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,9 +48,11 @@ jobs:
           java-version: 17
       - name: application.yml 파일 만들기
         run: |
+          cd spring_demo
           echo "${{ secrets.APPLICATION_PROPERTIES }}" > src/main/resources/application.yml
       - name: 테스트 및 빌드
-        run: ./gradlew clean build
+        run: |
+          ./gradlew clean build
       - name: 빌드 파일 이름 변경
         run: mv build/libs/*SNAPSHOT.jar ./project.jar
       - name: SCP로 EC2로 파일 전송
