--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,9 +51,7 @@ jobs:
           cd spring_demo
           echo "${{ secrets.APPLICATION_PROPERTIES }}" > src/main/resources/application.yml
       - name: 테스트 및 빌드
-        run: |
-          pwd
-          ./gradlew clean build
+        run: ./gradlew clean build
       - name: 빌드 파일 이름 변경
         run: mv build/libs/*SNAPSHOT.jar ./project.jar
       - name: SCP로 EC2로 파일 전송
