--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,9 +38,6 @@ jobs:
 
   Spring-Deploy:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: spring_server
     steps:
       - name: Github Repository에 올린 파일들을 불러오기
         uses: actions/checkout@v4
@@ -50,20 +47,21 @@ jobs:
           distribution: temurin
           java-version: 17
       - name: application.yml 파일 만들기
-        run: |
-          cd spring_demo
-          echo "${{ secrets.APPLICATION_PROPERTIES }}" > src/main/resources/application.yml
+        run: echo "${{ secrets.APPLICATION_PROPERTIES }}" > src/main/resources/application.yml
+        working-directory: spring_demo
       - name: 테스트 및 빌드
         run: ./gradlew clean build
+        working-directory: spring_demo
       - name: 빌드 파일 이름 변경
         run: mv build/libs/*SNAPSHOT.jar ./project.jar
+        working-directory: spring_demo
       - name: SCP로 EC2로 파일 전송
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
-          source: project.jar
+          source: spring_demo/project.jar
           target: /home/ubuntu/spring_server/tobe
       - name: SSH로 EC2 접속
         uses: appleboy/ssh-action@master
