--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,7 +66,7 @@ jobs:
       - name: S3로 파일 전송
         run: aws s3 cp --region ap-northeast-2 ./${{ github.sha }}.tar.gz s3://instagram-deploy-bucket/${{ github.sha }}.tar.gz
       - name: CodeDeploy 배포 시작
-        run: aws deploy create-deploymen
+        run: aws deploy create-deployment
           --region ap-northeast-2
           --application-name instagram-server-deploy
           --deployment-config-name CodeDeployDefault.AllAtOnce
